Added root folder for deployment

--- a/root/404-NotFound.html
+++ b/root/404-NotFound.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Space+Mono"
     />
-    <link rel="stylesheet" href="./404-NotFound.css" />
+    <link rel="stylesheet" href="../styles/404-NotFound.css" />
   </head>
   <body>
     <div class="container-fluid">
@@ -24,7 +24,7 @@
       <div class="scareCrow-sm-404">
         <img
           id="scareCrow"
-          src="./assets/Scarecrow.png"
+          src="../assets/Scarecrow.png"
           alt="Scare-Crow (404 Not - Found)"
         />
       </div>
